This is release 2.2.2 of the Jikes RVM. 

Highlights of this release include:
  + Support for the hybrid library configuration has been
    removed and the library support code refactored to simplify
    the interface between the GNU Classpath libraries and Jikes RVM.
  + Defect 3383 has been resolved.  We now recomend using the 
    Blackdown 1.4.1 SDK to build Jikes RVM on Linux/IA32 and the 
    IBM 1.4 SDK to build Jikes RVM on AIX/PowerPC.
  + Extensions for PowerPC hardware performance counters on AIX 5.
  + Many code cleanups to prepare the code base for a port of Jikes RVM
    to 64 bit PowerPC.
  + VM_AddressArray. Changes to classloader to make VM_Address a primitive. 
    (Flesh this out & update the userguide accordingly).
  + Changed PowerPC version of VM_Assembler.java to uniformly use PowerPC 
    mnemonics for the instructions. 

Other notes:
  + Changes to configuration files:
	added BOOTIMAGE_ADDRESS
        changed format of MAXIMUM_MAPPABLE_ADDRESS and BOOTIMAGE_LOAD_ADDRESS
  + sysCalls were moved from VM to VM_SysCall.  Naming conventions were 
    changed to make parameter/return types explicit in name.